--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,5 +32,7 @@ format:
     theme: 
       light: [yeti, theme_light.scss]
       #dark: [darkly, theme_dark.scss]
+    toc: true
+    number_sections: true
 editor: source
 
